# segment-anything-cpp-wrapper

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  export_pre_model.py  sam.cpp  sam.h  test.cpp
